@@ -1,2 +1,3 @@
 config*.xml
+.idea/
 
