@@ -1,0 +1,10 @@
+<?php
+
+// If you wish, copy this file as settings.php and edit your settings in settings.php.
+// Settings in the settings-template.php file have no effect.
+// The file settings.php remains unchanged after module reinstallation.
+
+define('PAY_PS_OPTION_DATA_MATCH_CHECK_DISABLED', 'off');
+
+define('PAY_PS_SPECIAL_ORDER_STATUS_PAYMENT_RECEIVED_ID', null);
+
