@@ -1,4 +1,0 @@
-<?php
-
-define('PAY_PS_OPTION_DATA_MATCH_CHECK_DISABLED', 'off');
-
